Implementado stores/register
