# validators/store.validator.js
@@ -1,0 +1,23 @@
+import { body } from 'express-validator';
+
+export const registerStoreValidator = [
+  body('name')
+    .trim()
+    .notEmpty().withMessage('Nome é obrigatório')
+    .isLength({ min: 3 }).withMessage('Nome deve ter pelo menos 3 caracteres'),
+
+  body('email')
+    .trim()
+    .notEmpty().withMessage('Email é obrigatório')
+    .isEmail().withMessage('Email inválido'),
+
+  body('password')
+    .notEmpty().withMessage('Senha é obrigatória')
+    .isLength({ min: 3 }).withMessage('Senha deve ter pelo menos 3 caracteres'),
+
+  body('phone')
+    .trim()
+    .notEmpty().withMessage('Telefone é obrigatório'),
+
+  
+];
